...
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_place_menu"
        android:icon="@mipmap/ic_action_add"
        android:title="@string/add_place"
        app:showAsAction="always|withText"/>
</menu>

