...
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_name"
                android:inputType="text"
                android:maxLength="254"
                android:maxLines="1"
...
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <nectec.thai.widget.address.AddressPicker
                android:id="@+id/address_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:paddingEnd="24dp"
                android:paddingLeft="4dp"
                android:paddingRight="24dp"
...
