<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_building_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_between_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTanrabad.Label"
            android:layout_marginRight="@dimen/space_between_content"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            android:textIsSelectable="false"/>

        <Button
            android:id="@+id/edit_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_edit_location_white_24dp"
            android:text="@string/edit_location"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="500dp">

        <fragment
            android:id="@+id/map_container"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            map:cameraTargetLat="13.764922"
            map:cameraTargetLng="100.538268"
            map:cameraZoom="7"
            map:liteMode="false"
            map:mapType="satellite"
            tools:ignore="MissingPrefix"/>

        <FrameLayout
            android:id="@+id/add_location_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent_50">

            <Button
                android:id="@+id/add_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@mipmap/ic_add_location_white_24dp"
                android:text="@string/define_building_location"/>
        </FrameLayout>

    </FrameLayout>
</merge>
