...
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>

    </android.support.design.widget.CoordinatorLayout>

    <ImageButton
        android:id="@+id/survey_more_building_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/screen_vertical_margin"
        android:layout_marginEnd="@dimen/screen_horizontal_margin"
        android:layout_marginRight="@dimen/screen_horizontal_margin"
...
