...
        android:textIsSelectable="false"
        android:textSize="@dimen/text_title"
        android:layout_marginTop="10dp"
        tools:text="บ้านเลขที่ 1"/>

    <TextView
        android:id="@+id/surveyed"
        style="@style/TanrabadTextAppearance.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/building_name"
        android:layout_below="@+id/building_name"
        android:layout_toStartOf="@id/edit_layout"
...
