...
                    android:layout_marginEnd="@dimen/between_view_margin_right"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/resident_count"
                    android:background="@drawable/quantity_field_shape"
                    android:textColor="@color/white"
                    android:textSize="@dimen/body_text_size"
                    android:inputType="number"
                    android:autoText="false"
                    android:gravity="center"
...
