...
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">ทันระบาด</string>
    <string name="app_fullname">ทันระบาดสำรวจ</string>
    <string name="title_activity_survey">สำรวจ</string>
    <string name="title_activity_edit_survey">แก้ไขสำรวจ</string>
    <string name="save">บันทึก</string>
    <string name="save_place_failed">บันทึกสถานที่ไม่สำเร็จ</string>
    <string name="save_building_failed">บันทึกอาคารไม่สำเร็จ</string>
    <string name="save_survey_failed">บันทึกการสำรวจไม่สำเร็จ</string>
    <string name="user_not_found">ไม่พบข้อมูลผู้ใช้งาน</string>
    <string name="container_not_found">ไม่พบรายการภาชนะ</string>
    <string name="please_enter_resident">โปรดระบุจำนวนผู้อาศัย</string>
...
    <string name="survey_place_not_found">ไม่พบสถานที่ที่สำรวจ</string>
    <string name="find_place_by_database">ค้นหาจากคลังข้อมูล</string>
    <string name="find_place_by_recent_survey">สถานที่ที่สำรวจล่าสุด</string>
    <string name="number_place_list_in_database">จำนวนรายการของรายชื่อสถานที่ที่แถบคลังข้อมูลตามประเภทที่เลือก</string>
    <string name="survey">สำรวจ</string>
    <string name="cancel">ยกเลิก</string>
    <string name="start_survey">เริ่มสำรวจ</string>
    <string name="confirm">ยืนยัน</string>
    <string name="torch">ไฟฉาย</string>
    <string name="yes">ใช่</string>
    <string name="no">ไม่</string>
    <string name="define_building_survey">ระบุอาคารสำรวจ</string>
    <string name="define_place_survey">ระบุสถานที่สำรวจ</string>
...
